Fix vertical spacing issues in main-player section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,8 @@ main {
     flex-direction: column;
     align-items: center;
     background-color: var(--bg-color);
-    justify-content: space-around;
+    justify-content: space-between;
+    column-gap: 0.5rem;
 }
 
 #main-player > * {
